# mtg-card-text-collage

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
src/: errors.rs  main.rs  ocr.rs  utils.rs
