[package]
name = "mtgtextgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
mtgapi-client = "0.2.0"
opencv = "0.88.5"
tesseract = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
