[package]
name = "mtgtextgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
image = "0.24.7"
reqwest = "0.11.23"
scraper = "0.18.1"
scryfall = "0.14.2"
tesseract = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
