[package]
name = "mtgtextgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
image = "0.25.5"
reqwest = "0.12.12"
scraper = "0.22.0"
scryfall = { version = "0.18.0" , features = ["unknown_variants"]}
tesseract = "0.15.1"
leptonica-sys = "0.4.9"
tokio = { version = "1.35.1", features = ["full"] }
